--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongodb": "^3.5.9",
+    "mongodb-schema": "^8.2.5",
     "mongoose": "^5.9.20",
     "mongoose-unique-validator": "^2.0.3",
     "nodemon": "^2.0.4"
